# mlvlab

./: .gitignore  README.md  README_es.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-publish.yml
.nicegui/: storage-general.json
docs/: README_es.md
learning/lesson-1-2/: ant_q_learning_agent.npy  panel.py  training.ipynb
learning/panels-1/panel-1-2/: panel.py  panel_wrappers.py  q_learning.py  training.ipynb  visualizer.py  visualizer_classic.py  visualizer_ext.py  visualizer_modded.py  visualizer_ui.py  visualizer_ui_wrappers.py  wrappers.py
learning/panels-1/panel-1-2/_dep/: panel_classic.py
mlvlab/: __init__.py  requirements.txt  test.py
mlvlab/agents/: base.py  q_learning.py
mlvlab/agents/ant-v1/: __init__.py  q_learning.py  state.py
mlvlab/agents/ql/: q_learning.py
mlvlab/algorithms/: README.md  __init__.py  registry.py
mlvlab/algorithms/ql/: plugin.py
mlvlab/algorithms/random/: plugin.py
mlvlab/cli/: eval_entry.py  main.py  player_entry.py  train_entry.py  utils.py
mlvlab/core/: __init__.py  logic.py  player.py  trainer.py
mlvlab/envs/: README.md  __init__.py
mlvlab/envs/ant/: README.md  ant_env.py  config.py
mlvlab/envs/ant_lost_v1/: README.md  README_es.md  env.py  game.py  renderer.py  view.py
mlvlab/envs/ant_maze_v1/: README.md  README_es.md  env.py  game.py  renderer.py  view.py
mlvlab/envs/ant_maze_v1/assets/: create_wall_asset.py
mlvlab/envs/ant_scout_v1/: README.md  README_es.md  adapters.py  config.py  env.py  renderer.py  view.py
mlvlab/envs/ant_v1/: README.md  ant_env.py  ant_env_bkp.py  env.py  game.py  panel.py  renderer.py
mlvlab/envs/ant_v1/_dep/: ant_env_original.py  ant_env_unfied.py  env.py
mlvlab/envs/nest_ant_v1/: README.md  config.py  game.py  view.py
mlvlab/helpers/: eval.py  ng.py  train.py  video.py
mlvlab/i18n/: core.py
mlvlab/i18n/locales/en/: mlvlab.json
mlvlab/i18n/locales/es/: mlvlab.json
mlvlab/ui/: __init__.py  analytics.py  runtime.py  state.py
mlvlab/ui/components/: __init__.py  agent_hyperparameters.py  base.py  dynamic_table.py  environment_viewer.py  info_panel.py  live_metric.py  metrics_dashboard.py  model_persistance.py  reward_chart.py  simulation_controls.py
mlvlab/web/: __init__.py  app.py
