[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlvlab"
version = "0.2.12"
description = "Visual AI Learning Ecosystem - MLVisual®"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Dependencias fijadas a las versiones exactas de tu entorno para máxima reproducibilidad.
    "gymnasium==1.2.0",
    "numpy==2.2.6",
    "arcade==3.3.2",
    "Pillow==11.0.0",
    "pyglet==2.1.6",
    "opencv-python==4.12.0.88",
    
    # Dependencias de la CLI
    "typer[all]==0.16.0",
    "rich==14.1.0",
    "moviepy==2.2.1",

    # Dependencias de la UI (AnalyticsView)
    "nicegui[highcharts]==2.22.1",
    "PySide6==6.9.1",
    "starlette==0.47.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=24.0.0",
    "isort>=5.10.0",
    "pipreqs>=0.4.13",
]

# Esta sección es CRUCIAL: Define el comando 'mlv' en la terminal.
[project.scripts]
mlv = "mlvlab.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

# Asegura que los archivos de assets (sonidos) se incluyan en el paquete distribuido.
[tool.setuptools.package-data]
mlvlab = [
    "envs/*/assets/*", 
    "i18n/locales/*/*.json"
]

